--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon"
   },
+  "prisma": {
+    
+    "seed": "npx ts-node prisma/seed.ts"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.4.1",
-    "express": "^4.21.2"
+    "express": "^5.0.1",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.5",
     "prisma": "^6.4.1",
     "tsx": "^4.19.3",
