--- a/package.json
+++ b/package.json
@@ -8,22 +8,29 @@
     "dev": "nodemon"
   },
   "prisma": {
-    
     "seed": "npx ts-node prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "express": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^11.4.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.5",
     "prisma": "^6.4.1",
+    "prisma-erd-generator": "^2.0.4",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
