--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
     "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
+    "ejs": "^3.1.10",
     "express": "^5.0.1",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^11.4.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.0",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.5",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.4.1",
     "prisma-erd-generator": "^2.0.4",
     "tsx": "^4.19.3",
