--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "tsc"
   },
   "prisma": {
     "seed": "npx ts-node prisma/seed.ts"
@@ -24,7 +25,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "streamifier": "^0.1.1",
+    "stripe": "^18.0.0"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^11.4.2",
@@ -38,6 +41,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.5",
     "@types/nodemailer": "^6.4.17",
+    "@types/streamifier": "^0.1.2",
     "prisma": "^6.4.1",
     "prisma-erd-generator": "^2.0.4",
     "tsx": "^4.19.3",
