--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "build": "prisma generate --no-engine &&  tsc "
+    "build": "npx prisma generate --no-engine &&  tsc "
   },
   "prisma": {
     "seed": "npx ts-node prisma/seed.ts"
