--- a/package.json
+++ b/package.json
@@ -17,20 +17,28 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/cookie-session": "^2.0.49",
+    "@types/express-session": "^1.18.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
     "ejs": "^3.1.10",
     "express": "^5.0.1",
+    "express-session": "^1.18.1",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^6.4.1",
     "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
-    "stripe": "^18.0.0",
-    "prisma": "^6.4.1"
+    "stripe": "^18.0.0"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^11.4.2",
