--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
+  "files": ["src/types/express/index.d.ts"],
   "compilerOptions": {
     "target": "ES6",
     "module": "CommonJS",
     "outDir": "./dist",
     "rootDir": "./src",
-    "typeRoots": ["./node_modules/@types", "./src/types/express"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
