--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
+    "connect-redis": "^8.1.0",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "ejs": "^3.1.10",
@@ -35,7 +36,9 @@
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "prisma": "^6.4.1",
+    "redis": "^5.1.0",
     "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
     "stripe": "^18.0.0"
@@ -52,6 +55,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.5",
     "@types/nodemailer": "^6.4.17",
+    "@types/passport-local": "^1.0.38",
     "@types/streamifier": "^0.1.2",
     "prisma-erd-generator": "^2.0.4",
     "tsx": "^4.19.3",
