--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "@types/cookie-session": "^2.0.49",
+    "@types/express-ejs-layouts": "^2.5.4",
     "@types/express-session": "^1.18.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
@@ -28,6 +29,7 @@
     "cookie-session": "^2.1.0",
     "ejs": "^3.1.10",
     "express": "^5.0.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -58,7 +60,8 @@
     "@types/passport-local": "^1.0.38",
     "@types/streamifier": "^0.1.2",
     "prisma-erd-generator": "^2.0.4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
   }
 }
