--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "files": ["src/types/express/index.d.ts"],
   "compilerOptions": {
-    "target": "ES6",
-    "module": "CommonJS",
-    "outDir": "./dist",
+    "target": "es2016",
+    "module": "commonjs",
     "rootDir": "./src",
-    "typeRoots": ["./node_modules/@types", "./src/types"],
-
-    "strict": true,
+    "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "noImplicitAny": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ],
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules"]
 }
